--- a/email_data/templates/reminder_40hr.html
+++ b/email_data/templates/reminder_40hr.html
@@ -3,6 +3,7 @@
     <p>This is your regular update regarding your progress through your assigned courses.</p>
     <p>Progress to date:</p>
     <section>
+        <!-- use df_series.to_frame().to_html() -->
         <!-- Insert status information here -->
         {{update_info}}
     </section>
