Revision to the cpr email template and section in .py

--- a/email_data/templates/cpr_email.html
+++ b/email_data/templates/cpr_email.html
@@ -3,7 +3,7 @@
 <body>
     <p>Hello {{name}},</p>
     <p>You are receiving this message because your CPR/First Aid certification is due soon. This message includes the registration link and information you needed to get started with your online CPR/First Aid course. This class will close {{close_date}}.</p>
-    <!-- <p>Also, if you already have a current certificate for Adult CPR/First Aid please feel free to reply to this email with proof as that would exempt you from this course.</p> -->
+    <p>Also, if you already have a current certificate for Adult CPR/First Aid please feel free to reply to this email with proof as that would exempt you from this course.</p>
     <div style="border: 5px solid red; margin: 5px; padding:10px;">
         <p>Link: <a href="{{link}}">{{link}}</a><br> Class Closing Date: {{close_date}}</p>
     </div>
@@ -12,11 +12,12 @@
     <p>Please note these are the steps you'll need to follow:</p>
     <ol>
         <li>
-            Register with link above. Check email for confirmation email with your username and login instructions.
+            Register with link above. Check your email for a confirmation message with your username and login instructions. After registration you will no longer need the link.
         </li>
         <li>
-            Use the "forgot password" prompt at www.redcrosslearningcenter.org to set you password for the first time.
+            Use the "forgot password" prompt at www.redcrosslearningcenter.org to set you password for the first time. Use the login button in the top right of the home page to view the forgot password option.
         </li>
+        <li>Usernames are typically the email address used. If this is not the case use the "forgot username" option on the login page.</li>
         <li>
             Log in to begin working on the course.
         </li>
