Changes to email template, webbrowser

--- a/email_data/templates/cpr_email.html
+++ b/email_data/templates/cpr_email.html
@@ -15,7 +15,7 @@
             Register with link above. Check your email for a confirmation message with your username and login instructions. After registration you will no longer need the link.
         </li>
         <li>
-            Use the "forgot password" prompt at www.redcrosslearningcenter.org to set you password for the first time. Use the login button in the top right of the home page to view the forgot password option.
+            Use the "forgot password" prompt at www.redcrosslearningcenter.org to set your password for the first time. Use the login button in the top right of the home page to view the forgot password option.
         </li>
         <li>Usernames are typically the email address used. If this is not the case use the "forgot username" option on the login page.</li>
         <li>
