Changes to email template, webbrowser

--- a/email_data/templates/reminder_40hr.html
+++ b/email_data/templates/reminder_40hr.html
@@ -1,13 +1,14 @@
 <body>
     <p>Hello {{name}},</p>
-    <p>This is your regular update regarding your progress through your assigned courses.</p>
+    <p>This is an update regarding your progress for your assigned courses.</p>
+
     <p>Progress to date:</p>
     <section>
         <!-- use df_series.to_frame().to_html() -->
         <!-- Insert status information here -->
-        {{update_info}}
+        <!-- {{update_info}} -->
     </section>
-    <p>Please note you have {{days_left}} days left to complete your trainings.</p>
+    <!-- <p>Please note you have {{days_left}} days left to complete your trainings.</p> -->
     <p>Let me know if you have any questions,</p>
     <p>Matthias Austin</p>
     <p>Training Coordinator<br>DS Training Team<br>Volunteers of America Western Washington | voaww.org<br>Contact Me: maustin@voaww.org | training@voaww.org</p>
