Updates and Bug Fixes in Report Maker and Email
Fixed bug in report maker tied to df indexing.

Added functionality to email.py with new functions and simpler
running. Working to incorporate it into the training tracker.
Key need it enabling other file runs as it still localizes
directories.

Added single report runner to training_reporter.py. Runs off
download or in data folder files, asks before moving to archive
to enable re-runs.

--- a/email_data/templates/reminder_40hr.html
+++ b/email_data/templates/reminder_40hr.html
@@ -1,12 +1,12 @@
 <body>
     <p>Hello {{name}},</p>
     <p>This is an update regarding your progress for your assigned courses.</p>
-
-    <p>Progress to date:</p>
+    <p>Your target end date for completing these courses is March 24th, though some extra time can be given upon request.</p>
+    <h4>Progress to date:</h4>
     <section>
         <!-- use df_series.to_frame().to_html() -->
         <!-- Insert status information here -->
-        <!-- {{update_info}} -->
+        {{update_info}}
     </section>
     <!-- <p>Please note you have {{days_left}} days left to complete your trainings.</p> -->
     <p>Let me know if you have any questions,</p>
