Individual small changes.

--- a/email_data/templates/peer_coaching_reminder.html
+++ b/email_data/templates/peer_coaching_reminder.html
@@ -2,13 +2,11 @@
 
 <body>
     <p>Hello {{name}},</p>
-    <p>This message is a reminder to complete the pre-class components of our virtual Peer Coaching course.</p>
-    <p>Our live session on Zoom is this Monday (3/15) from 10:00 am to 3:00 pm.</p>
-    <p>Zoom Link: <a href="https://us02web.zoom.us/j/81665112026">https://us02web.zoom.us/j/81665112026</a> <br> <em>No Password required</em></p>
-    <p><strong>Come prepared to be seen on camera and heard by the rest of the class. This zoom session will include group discussions and breakout rooms and requires all students participate.</strong></p>
-    <p>Review the email sent March 10th at 10:00 am for more detail.</p>
-    <p>Reply to this message with any questions,</p>
-    <p></p>
+
+    <p>Thank you for attending the class on Monday. I hope it was helpful.</p>
+    <p>You've been tasked with completing some asignments online at <a href="www.dstrainings.com">www.dstrainings.com</a>. It looks like</p>
+    <p> This is just a quick reminder that all of the components need to be completed no later than April 5th.</p>
+    <p>If you have any questions about the material or what you need to complete, please let me know!</p>
 </body>
 
 </html>
